goal delete and put handlers
