# docs/swagger.json
@@ -1863,7 +1863,7 @@
                         "JWT": []
                     }
                 ],
-                "description": "Updates an existing goal.",
+                "description": "Updates an existing goal. There is no need to fill user_id field.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1873,7 +1873,7 @@
                 "tags": [
                     "Tracker"
                 ],
-                "summary": "Update a goal",
+                "summary": "Update the goal",
                 "parameters": [
                     {
                         "description": "Goal object",
@@ -1881,7 +1881,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.Goal"
+                            "$ref": "#/definitions/v1.GoalRequest"
                         }
                     }
                 ],
@@ -1900,6 +1900,12 @@
                     },
                     "401": {
                         "description": "User not authenticated",
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Goal not found",
                         "schema": {
                             "$ref": "#/definitions/jsonresponse.ErrorResponse"
                         }
@@ -1936,7 +1942,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.Goal"
+                            "$ref": "#/definitions/v1.GoalRequest"
                         }
                     }
                 ],
@@ -1961,6 +1967,55 @@
                     },
                     "500": {
                         "description": "Error creating goal",
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Delete the existing goal.",
+                "tags": [
+                    "Tracker"
+                ],
+                "summary": "Delete the goal",
+                "parameters": [
+                    {
+                        "description": "goal id",
+                        "name": "ConnectedAccount",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.IdRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "goal deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "User not authenticated",
+                        "schema": {
+                            "$ref": "#/definitions/jsonresponse.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Error deleting goal",
                         "schema": {
                             "$ref": "#/definitions/jsonresponse.ErrorResponse"
                         }
@@ -2013,7 +2068,7 @@
                 "goal": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/repository.Goal"
+                        "$ref": "#/definitions/models.Goal"
                     }
                 },
                 "tracking_state": {
@@ -2185,6 +2240,35 @@
                 }
             }
         },
+        "models.Goal": {
+            "type": "object",
+            "properties": {
+                "currency": {
+                    "type": "string"
+                },
+                "current_state": {
+                    "type": "number"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "goal": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "need": {
+                    "type": "number"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "openbanking.Auth": {
             "type": "object",
             "properties": {
@@ -2289,35 +2373,6 @@
                     "type": "string"
                 },
                 "client_secret": {
-                    "type": "string"
-                }
-            }
-        },
-        "repository.Goal": {
-            "type": "object",
-            "properties": {
-                "currency": {
-                    "type": "string"
-                },
-                "current_state": {
-                    "type": "number"
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "goal": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "need": {
-                    "type": "number"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
@@ -2600,6 +2655,14 @@
             "properties": {
                 "expense": {
                     "$ref": "#/definitions/models.Expense"
+                }
+            }
+        },
+        "v1.GoalRequest": {
+            "type": "object",
+            "properties": {
+                "goal": {
+                    "$ref": "#/definitions/models.Goal"
                 }
             }
         },
